test-suite/cases/schema/errors/type-mismatch.eure
// Test schema validation error for type mismatch

input_eure = ```eure
name = 42
```

schema = ```eure
name = `text`
```

schema_errors = [
  ```
error: Type mismatch: expected text, got integer at path name
 --> <input>:1:1
  |
1 | name = 42
  | ^^^^^^^^^ Type mismatch: expected text, got integer at path name
  |
note: constraint defined here
 --> <schema>:1:1
  |
1 | name = `text`
  | ------------- constraint defined here
```
]
